# lexaudit

./: Dockerfile  README.md  app.py  env.py  graders.py  gradio_ui.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
